--- a/style.css
+++ b/style.css
@@ -1977,8 +1977,8 @@ ul.shortcode-archive li {
 	}
 }
 .page-template-template-portfolio .grid .entry-thumbnail img {
-	width:100%;
 	height: 150px;
+	width : 350px;
 	transition:all 0.4s;
 }
 .page-template-template-portfolio .grid .entry-thumbnail img:hover {
